--- a/css/cover.css
+++ b/css/cover.css
@@ -40,6 +40,10 @@ h1, h2, h3, h4, p, li{
 	font-size: 40px;
 }
 
+.font-size-45 {
+	font-size: 45px;
+}
+
 .font-weight-black {
 	font-weight: 700;
 }
@@ -133,6 +137,10 @@ h1, h2, h3, h4, p, li{
 	width: 80%;
 }
 
+.no-border {
+	border: none !important;
+}
+
 h1{
 	color: #004DFF;
 	font-size: 36px;
@@ -191,11 +199,9 @@ a:hover {
 }
 
 .btn{
-	font-size: 20px;
 	outline: none;
 	cursor: pointer;
 	border-radius: 2rem;
-	font-weight: 600;
 }
 
 .btn-secondary,
@@ -525,7 +531,7 @@ margin-top: 100px;
 	width: 238px;
 	height: 328px;
 	border-radius: 5px;
-	bottom: -20px;
+	bottom: -3px;
 	background-color: #29D1D8;
 	display: block;
 	color: white;
