--- a/css/cover.css
+++ b/css/cover.css
@@ -1,5 +1,5 @@
-/*@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600,700');
-@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700');*/
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700');
 body{
 	font-family: 'Work Sans', sans-serif;
 }
