--- a/css/cover.css
+++ b/css/cover.css
@@ -536,6 +536,8 @@ margin-top: 100px;
 	display: block;
 	color: white;
 	padding: 10px;
+	min-height: 70px;
+	max-height: 420px;
 }
 
 .grafica-barras div.uno { left: 0; background-color: #004DFF; }
@@ -595,7 +597,7 @@ input[type="button"]:focus {
 #preguntas {
 	text-align: center;
 	height: auto;
-	margin: 0 0 70px 0;
+	margin: 0 0 30px 0;
 	font-size: 36px;
 }
 
@@ -603,7 +605,7 @@ input[type="button"]:focus {
 	display: inline-block;
 	margin-left: 20px;
 	margin-right: 35px;
-	margin-bottom: 30px;
+	margin-bottom: 15px;
 }
 
 #dotsLine .dotgreen {
@@ -648,7 +650,7 @@ input[type="button"]:focus {
 }
 
 #inputCOL, #areaInput {
-	margin-bottom: 100px;
+	margin-bottom: 30px;
 }
 
 input[type="radio"] {
