--- a/css/cover.css
+++ b/css/cover.css
@@ -746,6 +746,10 @@ input[type=range]::-webkit-slider-thumb {
 	font-family: 'Space Mono', monospace;
 }
 
+.switch-slider .colmagt.active {
+	color: #007bff;
+}
+
 .switch-slider .switch {
 	position: relative;
 	display: inline-block;
