--- a/css/cover.css
+++ b/css/cover.css
@@ -279,6 +279,17 @@ a:hover {
 	padding-top: 10px;
 }
 
+@media only screen and (max-width: 768px) {
+	#contenedor-intro {
+		margin-left: 0 !important;
+		margin-top: 0 !important;
+		position: relative;
+		top: 0;
+		left: 0;
+		height: auto !important;
+	}
+}
+
 #contenedor-intro p{
 	max-width: 719px;
 	height: auto;
@@ -420,14 +431,12 @@ a:hover {
 	color: rgba(255, 255, 255, .5);
 }
 
-@media only screen and (min-width: 50px) and (max-width: 480px){
+@media only screen and (min-width: 50px) and (max-width: 768px){
 	.imge {
-		display: block;
-		max-width:50px;
-		max-height:15px;
 		width: auto;
 		height: auto;
 		margin: auto auto;
+		margin-bottom: 30px;
 	 }
 	.cinta{
 		margin-top: 4px;
@@ -866,7 +875,10 @@ footer {
 	background-color: #FFFFFF;
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
+	footer {
+		position: relative;
+	}
 	.contenedor-general {
 		position: relative;
 		top: 0;
