--- a/css/cover.css
+++ b/css/cover.css
@@ -204,6 +204,13 @@ a:hover {
 	border-radius: 2rem;
 }
 
+@media only screen and (max-width: 768px) {
+
+	.btn {
+		white-space: normal;
+	}
+}
+
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
